<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.11">
  <DUT Name="Acquisition_control" Id="{619702fc-4218-45f2-8ebe-8faac8907b17}">
    <Declaration><![CDATA[TYPE Acquisition_control :
STRUCT
Trigger_Enable			: BIT;
Trigger					: BIT;
Clear_Exposure_Complete	: BIT;
Reserved3				: BIT;
Reserved4				: BIT;
Reserved5				: BIT;
Reserved6				: BIT;
Set_Offline				: BIT;
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>