<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.11">
  <DUT Name="Acquisition_status" Id="{7f597e15-3ce4-4cd7-9957-cca4ca7bd61e}">
    <Declaration><![CDATA[TYPE Acquisition_status :
STRUCT
Trigger_Ready		: BIT ;
Trigger_Ack			: BIT ;
Exposure_Complete	: BIT ;
Missed_Ack			: BIT ;
Offline_Bit0		: BIT ;
Offline_Bit1		: BIT ;
Offline_Bit2		: BIT ;
Online				: BIT ;
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>