<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.11">
  <DUT Name="UNION_64Byte" Id="{5e0fcc86-435d-448c-8536-1b57e7985bc6}">
    <Declaration><![CDATA[TYPE UNION_64Byte :
UNION
sString 		: STRING(63);
aArrayOfByte 	: ARRAY[0..63] OF BYTE;
END_UNION
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>